[package]
name = "bs-quest-index"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
futures = "0.3"
openssl = { version = "*", optional = true }
semver = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.3", features = ["macros", "runtime-tokio", "sqlite"], default-features = false }
tokio = { version = "0.2", features = ["fs", "macros", "rt-threaded"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
warp = { version = "0.2.4", default-features = false }

[features]
openssl-vendored = ["openssl", "openssl/vendored"]
