[package]
name = "bs-quest-index"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0.32"
bytes = "0.5.6"
futures = "0.3.5"
openssl = { version = "*", optional = true }
semver = { version = "0.10.0", features = ["serde"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
sqlx = { version = "0.4.0-beta.1", features = ["macros", "migrate", "offline", "runtime-tokio", "sqlite"], default-features = false }
tokio = { version = "0.2.22", features = ["fs", "macros", "rt-threaded"] }
tracing = "0.1.19"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.11"
warp = { version = "0.2.4", default-features = false }

[features]
openssl-vendored = ["openssl", "openssl/vendored"]
